# parallelexperimentsbuffon

./: .gitignore  CMakeLists.txt  HandcraftedOrganicFreerangeMakefile  Makefile  README.md  batchrng_kernel.cu  batchrng_kernel.hu  cudaResourceWrapper.hu  cutils.cu  cutils.hu  main.cu  main.cxx  misc.cu  misc.hu  misc.hxx  naive_kernel.cu  naive_kernel.hu
